build/log/idf_py_stderr_output_17122
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_setup':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:26:93: error: expected ')' before ';' token
   26 |         uart_write_bytes(uart_num, send_buffer, (sizeof(send_buffer)/sizeof(send_buffer[0]));
      |                         ~                                                                   ^
      |                                                                                             )
/home/bmetal/esp-idf/uartTest/main/uartTest.c:28:59: error: expected ';' before '}' token
   28 |         ESP_ERROR_CHECK(uart_wait_tx_done(uart_num, 500));
      |                                                           ^
      |                                                           ;
   29 | }
      | ~                                                          
/home/bmetal/esp-idf/uartTest/main/uartTest.c: At top level:
/home/bmetal/esp-idf/uartTest/main/uartTest.c:31:1: error: type qualifiers ignored on function return type [-Werror=ignored-qualifiers]
   31 | const void uart_rcv(){
      | ^~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:37:9: error: expected ',' or ';' before 'while'
   37 |         while(1){
      |         ^~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:36:17: warning: unused variable 'maxBytes' [-Wunused-variable]
   36 |         uint8_t maxBytes = 13
      |                 ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:35:17: warning: unused variable 'rx_data' [-Wunused-variable]
   35 |         uint8_t rx_data[128];
      |                 ^~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:33:27: warning: unused variable 'uart_num' [-Wunused-variable]
   33 |         const uart_port_t uart_num = UART_NUM_2;
      |                           ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'app_main':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:9: error: implicit declaration of function 'uart' [-Wimplicit-function-declaration]
   49 |         uart(rcv);
      |         ^~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:14: error: 'rcv' undeclared (first use in this function)
   49 |         uart(rcv);
      |              ^~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:14: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
